--- a/kubernetesaws/argocd/shared/templates/external-secrets.yaml
+++ b/kubernetesaws/argocd/shared/templates/external-secrets.yaml
@@ -11,23 +11,21 @@ spec:
     namespace: transverse
   project: shared
   source:
-    chart: kubernetes-external-secrets
+    chart: external-secrets
     helm:
-      releaseName: kubernetes-external-secrets
+      releaseName: external-secrets
       parameters: 
         - name: serviceAccount.create
-          value: "false"
-        - name: env.AWS_REGION
-          value: {{ .Values.app.region | quote }}
+          value: "true"
         - name: serviceAccount.name
           value: "station-external-secret-sa" 
+        - name: serviceAccount.annotations.eks\.amazonaws\.com/role-arn
+          value: "arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role"
         - name: fullnameOverride
           value: "station-external-secrets" 
-        - name: fullnameOverride
-          value: "station-external-secrets" 
-
-    repoURL: https://external-secrets.github.io/kubernetes-external-secrets/
-    targetRevision: 8.5.5
+ 
+    repoURL: https://charts.external-secrets.io
+    targetRevision: v0.5.9
   syncPolicy:
     automated:
       prune: true
