--- a/kubernetesaws/helm/station/templates/stationdb-external-secret.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-external-secret.yaml
@@ -12,12 +12,16 @@ spec:
   data:
     
 
-    - key: stationsec-secretmanager
-      property: stationdbrootpassword 
-      name: database-rootpassword 
+    - secretKey: database-rootpassword 
+      remoteRef:
+        key: stationsec-secretmanager
+        property: stationdbrootpassword 
+      
 
-    - key: stationsec-secretmanager 
-      property: stationdbpassword 
-      name: database-password
+    - secretKey: database-password
+      remoteRef:
+        key: stationsec-secretmanager 
+        property: stationdbpassword 
+
 
 {{- end }}
