--- a/kubernetesaws/helm/station/templates/stationredis-external-secret.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-external-secret.yaml
@@ -11,9 +11,10 @@ spec:
 
   data:
     
-
-    - key: stationsec-secretmanager
-      property: stationredispassword 
-      name: redis-password 
+    - secretKey: redis-password  
+      remoteRef:
+        key: stationsec-secretmanager
+        property: stationredispassword  
+      
 
 {{- end }}
