--- a/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
+++ b/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
@@ -18,9 +18,11 @@ spec:
         - name: image.repository
           value: "602401143452.dkr.ecr.eu-west-3.amazonaws.com/eks/aws-efs-csi-driver"
         - name: controller.serviceAccount.create
-          value: "false"
+          value: "true"
         - name: controller.serviceAccount.name
           value: "station-efs-csi-controller-sa" 
+        - name: controller.serviceAccount.annotations.eks\.amazonaws\.com/role-arn
+          value: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-efs-iam-role
 
     repoURL: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
     targetRevision: 2.2.7
