--- a/kubernetesaws/helm/station/templates/stationdb-external-secret.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-external-secret.yaml
@@ -1,5 +1,5 @@
 {{- if (eq .Values.stationdb.mode "externaldb")   }}
-apiVersion: "kubernetes-client.io/v1" 
+apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: stationdb-secret
