--- a/kubernetesaws/helm/station/templates/stationredis-external-secret.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-external-secret.yaml
@@ -5,9 +5,10 @@ metadata:
   name: stationredis-secret 
   namespace:  {{ .Release.Namespace | quote }}
 spec:
-  backendType: secretsManager
 
-  region: {{ .Values.app.network.region | quote  }} 
+  secretStoreRef:
+    name: global-secret-store
+    kind: ClusterSecretStore
 
   data:
     
