Correction oubli role ARN dans ClusterSecretStore

--- a/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
+++ b/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
@@ -6,4 +6,5 @@ spec:
   provider:
     aws:
       service: SecretsManager
+      role: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role
       region: {{ .Values.app.region | quote  }} 
