Correction oubli role ARN dans ClusterSecretStore

--- a/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
+++ b/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
@@ -7,4 +7,14 @@ spec:
     aws:
       service: SecretsManager
       role: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role
-      region: {{ .Values.app.region | quote  }} 
+      region: {{ .Values.app.region | quote  }}
+      auth:
+        secretRef:
+          accessKeyIDSecretRef:
+            name: awssm-secret
+            key: access-key
+            namespace: default
+          secretAccessKeySecretRef:
+            name: awssm-secret
+            key: secret-access-key
+            namespace: default
