--- a/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
+++ b/kubernetesaws/helm/transverse/templates/global-secret-store.yaml
@@ -6,7 +6,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      role: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role
+      #role: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role
       region: {{ .Values.app.region | quote  }}
       auth:
         secretRef:
