--- a/kubernetesaws/argocd/shared/templates/external-secrets.yaml
+++ b/kubernetesaws/argocd/shared/templates/external-secrets.yaml
@@ -17,6 +17,8 @@ spec:
       parameters: 
         - name: serviceAccount.create
           value: "true"
+        - name: serviceAccount.name
+          value: "external-secrets-sa" 
         - name: serviceAccount.annotations.eks\.amazonaws\.com/role-arn
           value: "arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-secret-iam-role"
   
