--- a/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
+++ b/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
@@ -19,6 +19,8 @@ spec:
           value: "602401143452.dkr.ecr.eu-west-3.amazonaws.com/eks/aws-efs-csi-driver"
         - name: controller.serviceAccount.create
           value: "true"
+        - name: controller.serviceAccount.name
+          value: "efs-csi-controller-sa" 
         - name: controller.serviceAccount.annotations.eks\.amazonaws\.com/role-arn
           value: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/station-efs-iam-role
 
