--- a/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
+++ b/kubernetesaws/argocd/shared/templates/efs-csi-driver.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: station-aws-efs-csi-driver
+  name: aws-efs-csi-driver
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "3"
