--- a/kubernetesaws/argocd/shared/templates/external-secrets.yaml
+++ b/kubernetesaws/argocd/shared/templates/external-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: station-external-secrets
+  name: external-secrets
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "4"
