--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -229,8 +229,8 @@ jobs:
           ./get_helm.sh
 
       # Install secret manager kubernetes secrets
-      - name: Get Kubernetes secrets - Secret manager
-        id: get kubernetes-secrets-manager
+      - name: Get Kubernetes secrets - SM
+        id: get kubernetes-sm
         run: |
           kubectl get secret awssm-secret -n default
           EXEC_GET_SECRETMANAGER="$?"
