--- a/.github/workflows/validate-eks.yaml
+++ b/.github/workflows/validate-eks.yaml
@@ -24,6 +24,15 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION}} 
           terraform_wrapper: false
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.aws_access_key }}
+          aws-secret-access-key: ${{ secrets.aws_secret_key }}
+          role-to-assume: ${{ secrets.aws_role }}
+          aws-region: eu-west-3
+          role-duration-seconds: 3600
+
       - name: init
         id: init
         run: terraform init  -backend-config="backends/dev_backend.tfvars"
