--- a/.github/workflows/validate-eks.yaml
+++ b/.github/workflows/validate-eks.yaml
@@ -39,5 +39,6 @@ jobs:
 
 
       - name: Execute tfsec
+        if: ${{ always() }}
         run: tfsec .
         working-directory: terraformaws/eks
