--- a/kubernetesaws/helm/station/templates/stationdb-secret-internal.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-secret-internal.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.stationdb.mode "internaldb")   }}
+{{- if (eq .Values.secrets.mode "internal")   }}
 apiVersion: v1
 kind: Secret
 metadata:
