--- a/kubernetesaws/helm/station/templates/stationdb-secret-aws.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-secret-aws.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.stationdb.mode "externaldb")   }}
+{{- if (eq .Values.secrets.mode "aws")   }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
