--- a/kubernetesaws/helm/station/templates/stationredis-secret-external.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-secret-external.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.stationredis.mode "externalredis")   }}
+{{- if (eq .Values.secrets.mode "aws")   }}
 apiVersion: external-secrets.io/v1beta1 
 kind: ExternalSecret
 metadata:
