--- a/kubernetesaws/helm/station/templates/stationredis-secret-internal.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-secret-internal.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.stationredis.mode "internalredis")   }}
+{{- if (eq .Values.secrets.mode "internal")   }}
 apiVersion: v1
 kind: Secret
 metadata:
