--- a/kubernetesaws/helm/station/values.yaml
+++ b/kubernetesaws/helm/station/values.yaml
@@ -21,13 +21,22 @@ image:
   # Context path of the repo nexus url
   repoNexusUrl: 'kagzouli3'
 
+secrets:
+  # Mode can be 'internal' if it's for local development, 'aws' if it comes from AWS, and 'vault' for secure on premise
+  mode: 'internal'
+
+  # For vault option
+  vault:
+
+    url: ''
+
 
 stationredis:
   
   # Mode : internalredis or externalredis
   mode: 'internalredis'
 
-  # redis password - Use only for mode=internalredis
+  # redis password - Use only for secrets.mode=internal
   redisPassword: 'redis60'
 
   # Host name of the redis - Use only for mode=externalredis
@@ -47,13 +56,13 @@ stationdb:
   # Directory where to put data of the database - Use only if mode=internaldb
   databaseData: data
   
-  # Mysql root password -Use only for mode=internaldb
+  # Mysql root password -Use only for secrets.mode=internal
   mysqlRootPassword: root123
   
   # Mysql user
   mysqlUser: stationUser
   
-  # Mysql password - Use only for mode=internaldb
+  # Mysql password - Use only for secrets.mode=internal
   mysqlPassword: stationpwd
 
   # Use only if mode=externaldb for url external database
