--- a/kubernetesaws/helm/station/values.yaml
+++ b/kubernetesaws/helm/station/values.yaml
@@ -37,7 +37,7 @@ stationredis:
   mode: 'internalredis'
 
   # redis password - Use only for secrets.mode=internal
-  redisPassword: 'redis60'
+  redisPassword: ''
 
   # Host name of the redis - Use only for mode=externalredis
   hostname: '' 
