--- a/kubernetesaws/helm/station/templates/stationdb-secret-vault.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-secret-vault.yaml
@@ -16,13 +16,13 @@ spec:
 
     - secretKey: database-rootpassword 
       remoteRef:
-        key: /secrets/data/exaka/{{ .Values.app.environment}}/station
+        key: /secrets/exaka/{{ .Values.app.environment}}/station
         property: stationdbrootpassword 
       
 
     - secretKey: database-password
       remoteRef:
-        key: /secrets/data/exaka/{{ .Values.app.environment}}/station
+        key: /secrets/exaka/{{ .Values.app.environment}}/station
         property: stationdbpassword 
 
 
