--- a/kubernetesaws/helm/station/templates/stationredis-secret-vault.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-secret-vault.yaml
@@ -1,8 +1,8 @@
 {{- if (eq .Values.secrets.mode "vault")   }}
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1beta1 
 kind: ExternalSecret
 metadata:
-  name: stationdb-secret
+  name: stationredis-secret 
   namespace:  {{ .Release.Namespace | quote }}
 spec:
   refreshInterval: "15s"
@@ -13,16 +13,9 @@ spec:
 
   data:
     
-
-    - secretKey: database-rootpassword 
+    - secretKey: redis-password  
       remoteRef:
         key: /secrets/exaka/{{ .Values.app.environment}}/station
-        property: stationdbrootpassword 
+        property: stationredispassword  
       
-
-    - secretKey: database-password
-      remoteRef:
-        key: /secrets/exaka/{{ .Values.app.environment}}/station
-        property: stationdbpassword 
-
 {{- end }}
