--- a/.github/workflows/deploy-kub-station.yaml
+++ b/.github/workflows/deploy-kub-station.yaml
@@ -60,7 +60,7 @@ jobs:
   # Deploy clusterKubeWorker
   kubeworkerinstance:
     uses: ./.github/workflows/terraform-aws-apply-reusable_2level.yaml
-    needs: networks
+    needs: kubemasterinstance
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
