Add namespace token

--- a/kubernetesaws/helm/station/templates/station-secretstore-vault.yaml
+++ b/kubernetesaws/helm/station/templates/station-secretstore-vault.yaml
@@ -15,6 +15,7 @@ spec:
         # https://www.vaultproject.io/docs/auth/token
         tokenSecretRef:
           name: "vault-secret"
+          namespace:  {{ .Release.Namespace | quote }}
           key: "token"
   
 {{- end }}
