--- a/kubernetesaws/helm/station/templates/stationredis-secret-vault.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-secret-vault.yaml
@@ -15,7 +15,7 @@ spec:
     
     - secretKey: redis-password  
       remoteRef:
-        key: /secrets/exaka/{{ .Values.app.environment}}/station
+        key: /exaka/{{ .Values.app.environment}}/station
         property: stationredispassword  
       
 {{- end }}
