--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM tomcat:9.0.38-jdk8-openjdk
 
-MAINTAINER Karim GZ "kagzouli@exaka.com"
+LABEL application.contact = "kagzouli@exaka.com"
 
 
 RUN  wget -O mysql-connector-java-8.0.30.jar "https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar"
@@ -15,6 +15,10 @@ ADD conf/web.xml /usr/local/tomcat/conf/web.xml
 RUN rm -rf /usr/local/tomcat/webapps/*
 RUN mkdir /usr/local/tomcat/webapps/ROOT
 COPY page/404.html /usr/local/tomcat/webapps/ROOT/404.html
-
-
 COPY StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
+
+# Give this directory the tomcat right
+RUN chown -R tomcat:tomcatgroup /usr/local/tomcat/*
+# Run with user tomcat
+USER tomcat
+WORKDIR /usr/local/tomcat/
