--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -3,8 +3,11 @@ FROM tomcat:9.0.38-jdk8-openjdk
 LABEL application.contact = "kagzouli@exaka.com"
 
 
-RUN  wget -O mysql-connector-java-8.0.30.jar "https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar"
-RUN cp mysql-connector-java-8.0.30.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.30.jar
+RUN  groupadd -r -g 2050 tomcat && useradd -u 2050 -r -g tomcat tomcat \ 
+ &&  wget -O mysql-connector-java-8.0.30.jar "https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar" \
+ &&  cp mysql-connector-java-8.0.30.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.30.jar \
+ &&  rm -rf /usr/local/tomcat/webapps/* \
+ &&  mkdir /usr/local/tomcat/webapps/ROOT
 
 ADD bin-set/setenv.sh /usr/local/tomcat/bin/setenv.sh
 ADD conf/context.xml /usr/local/tomcat/conf/context.xml
@@ -12,13 +15,11 @@ ADD conf/server.xml /usr/local/tomcat/conf/server.xml
 ADD conf/web.xml /usr/local/tomcat/conf/web.xml
 
 # Raison de sécurité - On desactive les applications par default et on met une 404.html
-RUN rm -rf /usr/local/tomcat/webapps/*
-RUN mkdir /usr/local/tomcat/webapps/ROOT
 COPY page/404.html /usr/local/tomcat/webapps/ROOT/404.html
 COPY StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
 
 # Give this directory the tomcat right
-RUN chown -R tomcat:tomcatgroup /usr/local/tomcat/*
+RUN chown -R tomcat:tomcat /usr/local/tomcat/*
 # Run with user tomcat
 USER tomcat
 WORKDIR /usr/local/tomcat/
