Correction droit image

--- a/application/StationDemoDb/Dockerfile
+++ b/application/StationDemoDb/Dockerfile
@@ -4,3 +4,11 @@ LABEL  application.contact = "kagzouli@exaka.com"
 
 ADD conf/stationdb.conf /etc/mysql/mysql.conf.d/stationdb.conf
 ADD init/db-station-trafstat.sql /docker-entrypoint-initdb.d/db-station-trafstat.sql
+
+# Give this directory the tomcat right
+RUN chown -R mysql:mysql /docker-entrypoint-initdb.d \
+ && chown -R mysql:mysql /etc/mysql 
+
+# User mysql
+USER mysql
+
