--- a/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
@@ -26,6 +26,9 @@ spec:
       labels:
         app: stationdb
     spec:
+      securityContext:
+        runAsUser: 999
+        runAsGroup: 999
       containers:
         - name: stationdb
           image: {{ template "stationdb.image.label" .  }}
