--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -7,7 +7,8 @@ RUN  groupadd -r -g 2050 tomcat && useradd -u 2050 -r -g tomcat tomcat \
  &&  wget -O mysql-connector-java-8.0.30.jar "https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar" \
  &&  cp mysql-connector-java-8.0.30.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.30.jar \
  &&  rm -rf /usr/local/tomcat/webapps/* \
- &&  mkdir /usr/local/tomcat/webapps/ROOT
+ &&  mkdir /usr/local/tomcat/webapps/ROOT \
+ &&  rm -f /usr/local/tomcat/mysql-connector-java-8.0.30.jar
 
 ADD bin-set/setenv.sh /usr/local/tomcat/bin/setenv.sh
 ADD conf/context.xml /usr/local/tomcat/conf/context.xml
@@ -19,7 +20,7 @@ COPY page/404.html /usr/local/tomcat/webapps/ROOT/404.html
 COPY StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
 
 # Give this directory the tomcat right
-RUN chown -R tomcat:tomcat /usr/local/tomcat/*
+RUN chown -R tomcat:tomcat /usr/local/tomcat
 # Run with user tomcat
 USER tomcat
 WORKDIR /usr/local/tomcat/
