--- a/kubernetesaws/helm/station/values.yaml
+++ b/kubernetesaws/helm/station/values.yaml
@@ -56,7 +56,7 @@ stationredis:
   usessl: false
 
   image:
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
 
 stationdb:
   mode: 'internaldb'
@@ -93,7 +93,7 @@ stationdb:
     efsaccesspointid: ''
        
   image:
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
 
 
 stationback:
@@ -125,7 +125,7 @@ stationback:
     serviceType: ClusterIP 
 
   image:
-    pullPolicy: IfNotPresent   
+    pullPolicy: Always   
 
   ingress:
  
@@ -176,7 +176,7 @@ stationfront:
     serviceType: ClusterIP 
  
   image:
-    pullPolicy: IfNotPresent  
+    pullPolicy: Always  
 
   ingress:
 
