--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -34,6 +34,12 @@ spec:
         - name: stationfront-nginx
           image: {{ include "stationfront.image.label" . | quote }} 
           imagePullPolicy: {{ .Values.stationfront.image.pullPolicy | quote }}
+          securityContext:
+            capabilities:
+              drop:
+                - all
+              add:
+                - NET_BIND_SERVICE
           env:
           - name: AWS_REGION
             value: {{ .Values.stationfront.region | quote  }}
