--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -74,6 +74,7 @@ spec:
           ports:
           - containerPort: 8080
             protocol: TCP
+      serviceAccountName: station
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
