--- a/kubernetesaws/helm/station/templates/stationredis-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-deployment.yaml
@@ -40,4 +40,5 @@ spec:
           ports:
           - containerPort: 6379 
             protocol: TCP
+      serviceAccountName: station
  {{- end }}
