--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -101,6 +101,7 @@ spec:
           ports:
           - containerPort: 8080
             protocol: TCP 
+      serviceAccountName: station
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
