--- a/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
@@ -63,6 +63,7 @@ spec:
           ports:
           - containerPort: 3306
             protocol: TCP
+      serviceAccountName: station
       {{- if (ne .Values.stationdb.storage.storageClass "none")   }}
       volumes:
       - name: datastationdb 
