--- a/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationdb-deployment.yaml
@@ -35,6 +35,12 @@ spec:
           imagePullPolicy: {{ .Values.stationdb.image.pullPolicy | quote }}
           securityContext:
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - all
+              add:
+                - NET_BIND_SERVICE
           env:
           - name: MYSQL_ROOT_PASSWORD
             valueFrom:
@@ -51,14 +57,17 @@ spec:
                 name: stationdb-secret 
                 key: database-password 
           {{- if (ne .Values.stationdb.storage.storageClass "none")   }} 
+          resources:
+            requests:
+              cpu: 300m
+              memory: 1024Mi
+            limits:
+              cpu: 500m
+              memory: 1024Mi
           volumeMounts:
           - name: datastationdb  
             mountPath: /var/lib/mysql
             readOnly: false
-   #       securityContext:
-   #         runAsUser: 65534
-   #         runAsGroup: 65534
-   #         allowPrivilegeEscalation: false
           {{- end }}
           ports:
           - containerPort: 3306
