--- a/kubernetesaws/helm/station/templates/stationredis-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationredis-deployment.yaml
@@ -35,10 +35,23 @@ spec:
           imagePullPolicy: {{ .Values.stationredis.image.pullPolicy | quote }}
           securityContext:
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - all
+              add:
+                - NET_BIND_SERVICE
           command: ["redis-server"]
           args: ["--requirepass", {{ .Values.stationredis.redisPassword | quote }}]
           ports:
           - containerPort: 6379 
             protocol: TCP
+          resources:
+            requests:
+              cpu: 100m
+              memory: 400Mi
+            limits:
+              cpu: 300m
+              memory: 400Mi 
       serviceAccountName: station
  {{- end }}
