Add test variabilise

--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -40,6 +40,7 @@ spec:
           securityContext:
             runAsNonRoot: true
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false
             capabilities:
               drop:
                 - all
