--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -37,6 +37,7 @@ spec:
           securityContext:
             runAsNonRoot: true
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false
             capabilities:
               drop:
                 - all
